--- a/startfinal/design/styles.css
+++ b/startfinal/design/styles.css
@@ -23,6 +23,7 @@ body {
 
 .well {
   background-color: #121212;
+  border: none;
 }
 /* Dropdown styles for better visibility */
 .selectize-input input {
@@ -35,6 +36,7 @@ body {
     border-color: #ffffff; /* White border when focused for emphasis */
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Subtle glow effect */
 }
+
 .selectize-dropdown {
     background-color: #2c2f33; /* Match input background */
     color: #ffffff; /* White text */
@@ -67,11 +69,16 @@ div.selectize-dropdown .option.active {
     background-color: #121212; /* Even rows */
 }
 
-/* Ensure text remains readable */
-.dataTable tbody tr {
-    color: #ffffff;
+.dataTables_filter input:focus {
+  outline: none; /* Remove default outline */
+  border: 2px solid #1db954 !important; /* Green border on focus */
+  box-shadow: 0 0 5px #1db954; /* Optional: Add a subtle green glow */
 }
 
 div.datatables {
   color: #ffffff;
+}
+
+div.well {
+  border: none;
 }
