--- a/startfinal/design/styles.css
+++ b/startfinal/design/styles.css
@@ -1,14 +1,14 @@
 body {
-    background-color:	#121212; /* Dark background */
-    color: #ffffff; /* White text */
+    background-color:	#121212;
+    color: #ffffff;
     font-family: "Helvetica", sans-serif;
 }
 .nav-tabs li a {
-    color: #ffffff; /* Green tab text */
+    color: #ffffff;
 }
 
 .nav-tabs li a:hover {
-    background-color: #535353; /* Lighter gray on hover */
+    background-color: #535353;
     color: ##ffffff;
     border: none;
 }
@@ -16,7 +16,7 @@ body {
 .nav-tabs > li.active > a, 
 .nav-tabs > li.active > a:hover, 
 .nav-tabs > li.active > a:focus {
-    background-color: #1ed760 !important; /* Lighter gray when selected */
+    background-color: #1ed760 !important;
     color: #121212 !important;
     border: none;
 }
@@ -25,54 +25,69 @@ body {
   background-color: #121212;
   border: none;
 }
-/* Dropdown styles for better visibility */
+
 .selectize-input input {
-    background-color: #1ed760; !important /* Green background for input field */
-    color: #ffffff !important; /* White text for readability */
-    border: 2px solid #1ed760; /* Green border for visibility */
-    border-radius: 4px; /* Optional: Rounded corners */
+    background-color: #1ed760; !important 
+    color: #ffffff !important;
+    border: 2px solid #1ed760;
+    border-radius: 4px;
 }
 .selectize-input.focus {
-    border-color: #ffffff; /* White border when focused for emphasis */
-    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Subtle glow effect */
+    border-color: #ffffff;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
 }
 
 .selectize-dropdown {
-    background-color: #2c2f33; /* Match input background */
-    color: #ffffff; /* White text */
-    border: 2px solid #1ed760; /* Green border */
-    border-radius: 4px; /* Optional: Rounded corners */
+    background-color: #212121;
+    color: #ffffff;
+    border: 2px solid #1ed760;
+    border-radius: 4px; 
 }
 
 div.selectize-dropdown .option.active {
-    background-color: #1ed760 !important; /* Darker gray for selected option */
-    color
-    color: #121212 !important; /* Ensure text remains visible */
+  background-color: #1ed760 !important;
+  color: #121212 !important;
 }
 
 
 .selectize-dropdown .option:hover {
-    background-color: #1ed760 !important; /* Green highlight on hover, override active */
-    color: #121212; /* White text on hover */
+  background-color: #1ed760 !important;
+  color: #121212; 
 }
 
 .selectize-dropdown .option:focus {
-    background-color: #1ed760 !important;
-    color: #121212 !important;
+  background-color: #1ed760 !important;
+  color: #121212 !important;
 }
 
 .dataTable tbody tr:nth-child(odd) {
-    background-color: #212121; /* Odd rows */
+  background-color: #212121;
 }
 
 .dataTable tbody tr:nth-child(even) {
-    background-color: #121212; /* Even rows */
+  background-color: #121212;
 }
 
 .dataTables_filter input:focus {
-  outline: none; /* Remove default outline */
-  border: 2px solid #1ed760 !important; /* Green border on focus */
-  box-shadow: 0 0 5px #1ed760; /* Optional: Add a subtle green glow */
+  outline: none;
+  border: 2px solid #1ed760 !important;
+  box-shadow: 0 0 5px #1ed760;
+}
+
+.dataTables_length select {
+  background-color: #ffffff !important;
+  color: #121212 !important;
+}
+
+div.dataTables_length select option {
+  background-color: #212121 !important;
+  color: #ffffff !important;
+}
+
+
+div.dataTables_length select option:hover {
+  background-color: #1ed760;
+  color: #121212 !important;
 }
 
 div.datatables {
@@ -81,4 +96,18 @@ div.datatables {
 
 div.well {
   border: none;
+}
+
+.irs-slider {
+  background-color: #1ed760 !important;
+}
+
+.irs-bar {
+  background-color: #1ed760 !important;
+  border-color: #1ed760 !important;
+}
+
+.irs-from, .irs-to, .irs-single {
+    color: #121212 !important; 
+    background-color: #1ed760 !important;
 }
