--- a/startfinal/www/styles.css
+++ b/startfinal/www/styles.css
@@ -87,10 +87,7 @@ div.datatables {
   color: #ffffff;
 }
 
-.dataTable tbody tr.odd.selected {
-  background-color: #1ed760 !important;
-  color: #121212 !important;
-}
+
 
 .dataTable tbody tr:nth-child(odd) {
   background-color: #212121;
@@ -100,7 +97,11 @@ div.datatables {
   background-color: #121212;
 }
 
-
+table.dataTable tbody tr.odd.selected,
+table.dataTable tbody tr.even.selected{
+  background-color: #1ed760 !important;
+  color: #121212 !important;
+}
 
 .dataTables_filter input:focus {
   outline: none;
