--- a/startfinal/spotify_app/www/styles.css
+++ b/startfinal/spotify_app/www/styles.css
@@ -27,18 +27,18 @@ h2, h3, h4, h5 {
 }
 
 
-
 #sidebar {
   width: 250px;
-  background: #000000;
-  color: white;
+  background: #121212;
+  color: #ffffff;
   position: fixed;
   height: 100%;
   overflow-y: auto;
   padding: 10px;
-  border-right: 1px solid #333;
+  box-shadow: 0 0 5px #1ed760;
   display: block;
   transition: all 0.3s ease;
+  z-index: 1000;
 }
 
 #sidebar.hidden {
@@ -46,7 +46,7 @@ h2, h3, h4, h5 {
 }
 
 #content {
-  margin-left: 260px;
+  margin-left: 0;
   transition: all 0.3s ease;
 }
 
@@ -81,22 +81,22 @@ h2, h3, h4, h5 {
 
 #sidebar .radio label {
   display: block;
-  background-color: #222;
+  background-color: #121212;
   color: white;
   padding: 10px 15px;
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.2s ease;
-  border: 1px solid #444;
+  border: 1px solid #535353;
   font-size: 15px;
 }
 
 #sidebar .radio label:hover {
-  background-color: #333;
+  background-color: #535353;
 }
 
 #sidebar .radio input[type='radio']:checked + label {
-  background-color: #007bff;
+  background-color: #1ed760 !important; 
   color: white;
   font-weight: 500;
   border-color: #007bff;
@@ -108,7 +108,7 @@ h2, h3, h4, h5 {
 
 .nav-tabs li a:hover {
     background-color: #535353;
-    color: ##ffffff;
+    color: #ffffff;
     border: none;
 }
 
@@ -126,7 +126,7 @@ h2, h3, h4, h5 {
 }
 
 .selectize-input input {
-    background-color: #1ed760; !important 
+    background-color: #1ed760;
     color: #ffffff !important;
     border: 2px solid #1ed760;
     border-radius: 4px;
@@ -260,7 +260,32 @@ div.well {
   color: #121212 !important;
 }
 
+.checkbox input[type="checkbox"] {
+  appearance: none; /* Remove default browser styling */
+  -webkit-appearance: none; /* For older WebKit browsers */
+  -moz-appearance: none; /* For Firefox */
+  width: 12px; /* Size of the checkbox */
+  height: 12px;
+  background-color: #212121; /* Background when unchecked */
+  border: 1px solid #ffffff; /* Green border */
+  border-radius: 4px; /* Rounded corners */
+  vertical-align: middle;
+  margin-right: 5px; /* Space between checkbox and label */
+  cursor: pointer;
+}
 
+.checkbox input[type="checkbox"]:checked {
+  background-color: #1ed760; /* Green background when checked */
+  border-color: #1ed760;
+}
+
+
+
+/* Ensure label text remains white */
+.checkbox label {
+  color: white;
+  vertical-align: middle;
+}
 
 
 
